--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
+        <sonar.host.url>http:52.207.117.176:9000/</sonar.host.url>
+        <sonar.login>admin</sonar.login>
+        <sonar.password>admin</sonar.password>
     </properties>
 
     <dependencies>
@@ -47,7 +50,21 @@
         </dependency>
 
     </dependencies>
+         
+     <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>Jendarey Technologies Releases Nexus Repository</name>
+            <url>http://54.196.89.105:8081/jendarey/repository/web-releases/</url>
+        </repository>
 
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>Jendarey Technologies Snapshot Nexus Repository</name>
+            <url>http://54.196.89.105:8081/jendarey/repository/web-snapshots/</url> 
+        </snapshotRepository>
+    </distributionManagement>
+         
     <build>
         <finalName>classA23-votingapp</finalName>
         <plugins>
