--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
-        <sonar.host.url>http:52.207.117.176:9000/</sonar.host.url>
+             
+        <sonar.host.url>http://34.205.147.158:9000/</sonar.host.url>
         <sonar.login>admin</sonar.login>
         <sonar.password>admin</sonar.password>
     </properties>
